--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,11 +7,6 @@
     <title>ChatFic AI - 📖 Escreva sua Fanfic Livremente</title>
     
     <meta name="description" content="ChatFic AI: Crie, edite e compartilhe fanfics de qualquer universo com ajuda de inteligência artificial sem limites.">
-    <meta property="og:title" content="ChatFic AI - 📖 Criador de Fanfics">
-    <meta property="og:description" content="A ferramenta definitiva para escritores de fanfics. IA criativa, humor e liberdade total.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/3593/3593491.png">
-    
     <meta name="theme-color" content="#4f46e5">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -18,7 +14,6 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Tratamento de erros global para exibir mensagens amigáveis em vez de tela branca
       window.addEventListener('error', function(e) {
         if (e.message.includes('Script error')) return;
         const root = document.getElementById('root');
@@ -27,8 +22,8 @@
             <div style="padding: 40px; color: #4f46e5; font-family: sans-serif; text-align: center; height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #fafafa;">
               <h1 style="font-size: 60px; margin-bottom: 20px;">📖</h1>
               <h2 style="font-size: 24px; font-weight: 800; margin-bottom: 10px; color: #1f2937;">Ops! Algo deu errado</h2>
-              <p style="color: #6b7280; max-width: 300px; margin-bottom: 30px;">Isso pode ser um erro de conexão ou configuração da chave de API.</p>
-              <button onclick="location.reload()" style="padding: 12px 24px; background: #4f46e5; color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px -1px rgba(79, 70, 229, 0.2);">Tentar Novamente</button>
+              <p style="color: #6b7280; max-width: 300px; margin-bottom: 30px;">Isso pode ser um erro de conexão ou configuração da chave de API no Android Studio.</p>
+              <button onclick="location.reload()" style="padding: 12px 24px; background: #4f46e5; color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer;">Tentar Novamente</button>
             </div>`;
         }
       });
@@ -57,10 +52,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; -webkit-font-smoothing: antialiased; margin: 0; padding: 0; }
+        body { font-family: 'Plus Jakarta Sans', sans-serif; -webkit-font-smoothing: antialiased; margin: 0; padding: 0; overscroll-behavior-y: contain; }
         #root:empty { display: flex; align-items: center; justify-content: center; height: 100vh; background: #f9fafb; }
         #root:empty::after { content: "📖"; font-size: 3rem; animation: page-flip 2s infinite; }
         .dark #root:empty { background: #09090b; }
+        input, textarea { font-size: 16px !important; } /* Previne zoom no iOS/Android */
     </style>
     <script type="importmap">
 {
