--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div style="padding: 40px; color: #4f46e5; font-family: sans-serif; text-align: center; height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #fafafa;">
               <h1 style="font-size: 60px; margin-bottom: 20px;">📖</h1>
               <h2 style="font-size: 24px; font-weight: 800; margin-bottom: 10px; color: #1f2937;">Ops! Algo deu errado</h2>
-              <p style="color: #6b7280; max-width: 300px; margin-bottom: 30px;">Isso pode ser um erro de conexão ou configuração da chave de API no Android Studio.</p>
+              <p style="color: #6b7280; max-width: 300px; margin-bottom: 30px;">Isso pode ser um erro de conexão ou configuração da chave de API.</p>
               <button onclick="location.reload()" style="padding: 12px 24px; background: #4f46e5; color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer;">Tentar Novamente</button>
             </div>`;
         }
@@ -39,10 +39,20 @@
             animation: {
               'float': 'float 3s ease-in-out infinite',
               'page-flip': 'page-flip 4s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite',
+              'dot-bounce': 'dot-bounce 1.4s infinite ease-in-out both',
+              'shimmer': 'shimmer 2s infinite linear',
             },
             keyframes: {
               float: { '0%, 100%': { transform: 'translateY(0px)' }, '50%': { transform: 'translateY(-15px)' } },
-              'page-flip': { '0%': { transform: 'perspective(1000px) rotateY(0deg)' }, '100%': { transform: 'perspective(1000px) rotateY(-360deg)' } }
+              'page-flip': { '0%': { transform: 'perspective(1000px) rotateY(0deg)' }, '100%': { transform: 'perspective(1000px) rotateY(-360deg)' } },
+              'dot-bounce': {
+                '0%, 80%, 100%': { transform: 'scale(0)' },
+                '40%': { transform: 'scale(1.0)' }
+              },
+              'shimmer': {
+                '0%': { backgroundPosition: '-200% 0' },
+                '100%': { backgroundPosition: '200% 0' }
+              }
             }
           }
         }
@@ -56,7 +66,12 @@
         #root:empty { display: flex; align-items: center; justify-content: center; height: 100vh; background: #f9fafb; }
         #root:empty::after { content: "📖"; font-size: 3rem; animation: page-flip 2s infinite; }
         .dark #root:empty { background: #09090b; }
-        input, textarea { font-size: 16px !important; } /* Previne zoom no iOS/Android */
+        input, textarea { font-size: 16px !important; }
+        
+        .shimmer-bg {
+          background: linear-gradient(90deg, rgba(79,70,229,0.05) 25%, rgba(79,70,229,0.1) 50%, rgba(79,70,229,0.05) 75%);
+          background-size: 200% 100%;
+        }
     </style>
     <script type="importmap">
 {
